--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 	<meta charset="utf-8">
 </head>
 	<div class="page">
+		<header class="hautdelapage">
+			<div class="logo">
+				<img alt="logo" src="ohmyfood.png">
+			</div>
+			
+		</header>
 		
 	</div>
 
