--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 			<div class="logo">
 				<img alt="logo" src="ohmyfood.png">
 			</div>
+			<div class="GPS">
+				<div class="imageGPS">
+					<i class="fas fa-map-marker-alt"></i>
+				</div>
+				<div class="textGPS">
+					<p> Paris, Belleville</p>
+				</div>
+			</div>
 			
 		</header>
 		
