bouton explorer nos restaurants

--- a/index.html
+++ b/index.html
@@ -20,6 +20,19 @@
 					<p> Paris, Belleville</p>
 				</div>
 			</div>
+			<div class="blocreservation">
+				<p class="reservegras">
+					Réservez le menu qui vous convient
+				</p>
+				<p class="decouverte">
+					Découvrez des restaurants d'exception,<br>
+					séléctionnés par nos soins.
+				</p>
+				<div class="lienrestaurants">
+					<input type="button" value="Explorer nos restaurants">
+				</div>
+				
+			</div>
 			
 		</header>
 		
