--- a/index.html
+++ b/index.html
@@ -35,6 +35,21 @@
 			</div>
 			
 		</header>
+		<section class="Fonctionnement">
+			<p class="titrefonctionnement"> Fonctionnement</p>
+			<div class="blocfoctionnement">
+				<i class="fas fa-mobile-alt"></i>
+				<p class="textblocfoctionnement"> Choisissez un restaurant</p>
+			</div>
+			<div class="blocfoctionnement">
+				<i class="fas fa-list-ul"></i>
+				<p class="textblocfoctionnement">Composez votre menu</p>
+			</div>
+			<div class="blocfoctionnement">
+				<i class="fas fa-store"></i>
+				<p class="textblocfoctionnement">Dégustez au restaurant</p>
+			</div>
+		</section>
 		
 	</div>
 
