--- a/index.html
+++ b/index.html
@@ -37,18 +37,48 @@
 		</header>
 		<section class="Fonctionnement">
 			<p class="titrefonctionnement"> Fonctionnement</p>
-			<div class="blocfoctionnement">
+			<div class="blocfonctionnement">
 				<i class="fas fa-mobile-alt"></i>
-				<p class="textblocfoctionnement"> Choisissez un restaurant</p>
+				<p class="textblocfonctionnement"> Choisissez un restaurant</p>
 			</div>
-			<div class="blocfoctionnement">
+			<div class="blocfonctionnement">
 				<i class="fas fa-list-ul"></i>
-				<p class="textblocfoctionnement">Composez votre menu</p>
+				<p class="textblocfonctionnement">Composez votre menu</p>
 			</div>
-			<div class="blocfoctionnement">
+			<div class="blocfonctionnement">
 				<i class="fas fa-store"></i>
-				<p class="textblocfoctionnement">Dégustez au restaurant</p>
+				<p class="textblocfonctionnement">Dégustez au restaurant</p>
 			</div>
+		</section>
+		<section class="Restaurant">
+			<p class="titrerestaurant">Restaurants</p>
+				<div class="blocrestaurantun">
+					<img class="imagerestaurant"src="jay-wennington-N_Y88TWmGwA-unsplash.jpg">
+					<p class="nouveau">Nouveau</p>
+					<p class="nomdurestau">La palette du goût</p>
+					<p class="soustitre">Ménilmontant</p>
+					<i class="far fa-heart"></i>
+				</div>
+				<div class="blocrestaurantun">
+					<img class="imagerestaurant"src="stil-u2Lp8tXIcjw-unsplash.jpg">
+					<p class="nouveau">Nouveau</p>
+					<p class="nomdurestau">La note enchantée</p>
+					<p class="soustitre">Charonne</p>
+					<i class="far fa-heart"></i>
+				</div>
+				<div class="blocrestaurantdeux">
+					<img class="imagerestaurant"src="toa-heftiba-DQKerTsQwi0-unsplash.jpg">
+					<p class="nomdurestau">À la Française</p>
+					<p class="soustitre">Cité Rouge</p>
+					<i class="far fa-heart"></i>
+				</div>
+				<div class="blocrestaurantdeux">
+					<img class="imagerestaurant"src="louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
+					<p class="nomdurestau">Le délice des sens</p>
+					<p class="soustitre">Folie-Méricourt</p>
+					<i class="far fa-heart"></i>
+				</div>
+			
 		</section>
 		
 	</div>
