--- a/index.html
+++ b/index.html
@@ -79,7 +79,16 @@
 					<i class="far fa-heart"></i>
 				</div>
 			
-		</section>
+			</section>
+			<footer>
+				<img alt="logo" src="ohmyfood.png">
+				<i class="fas fa-utensils"></i>
+				<p class="proposer">Proposer un restaurant</p>
+				<i class="fas fa-hands-helping"></i>
+				<p class="partenaire">Devenir partenaire</p>
+				<p class="ML">Mentions légales</p>
+				<p class="contact">Contact</p>
+			</footer>
 		
 	</div>
 
