--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -9,6 +9,14 @@
 	<meta charset="utf-8">
 </head>
 <body>
+	<div class="page">
+		<header class="hautdelapage">
+			<div class="logo">
+				<img alt="logo" src="ohmyfood.png">
+				<i class="fas fa-arrow-left"></i>
+				<img class="imagerestaurantdeux"src="toa-heftiba-DQKerTsQwi0-unsplash.jpg">
+			</div>
+	</div>
 
 </body>
 </html>
