--- a/index.html
+++ b/index.html
@@ -52,32 +52,65 @@
 		</section>
 		<section class="Restaurant">
 			<p class="titrerestaurant">Restaurants</p>
-				<div class="blocrestaurantun">
-					<img class="imagerestaurant"src="jay-wennington-N_Y88TWmGwA-unsplash.jpg">
-					<p class="nouveau">Nouveau</p>
-					<p class="nomdurestau">La palette du goût</p>
-					<p class="soustitre">Ménilmontant</p>
-					<i class="far fa-heart"></i>
-				</div>
-				<div class="blocrestaurantun">
-					<img class="imagerestaurant"src="stil-u2Lp8tXIcjw-unsplash.jpg">
-					<p class="nouveau">Nouveau</p>
-					<p class="nomdurestau">La note enchantée</p>
-					<p class="soustitre">Charonne</p>
-					<i class="far fa-heart"></i>
-				</div>
-				<div class="blocrestaurantdeux">
-					<img class="imagerestaurant"src="toa-heftiba-DQKerTsQwi0-unsplash.jpg">
-					<p class="nomdurestau">À la Française</p>
-					<p class="soustitre">Cité Rouge</p>
-					<i class="far fa-heart"></i>
-				</div>
-				<div class="blocrestaurantdeux">
-					<img class="imagerestaurant"src="louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
-					<p class="nomdurestau">Le délice des sens</p>
-					<p class="soustitre">Folie-Méricourt</p>
-					<i class="far fa-heart"></i>
-				</div>
+
+				<a class="restaurantLink" href="#">
+					<p class="newRestaurant">Nouveau</p>
+					<img src="jay-wennington-N_Y88TWmGwA-unsplash.jpg">
+					<div>
+						<div>
+							<p class="name">La palette du goût</p>
+							<p >Ménilmontant</p>
+						</div>
+						<div>
+							<i class="far fa-heart"></i>
+						</div>
+					</div>
+
+
+				</a>
+				<a class="restaurantLink" href="#">
+					<p class="newRestaurant">Nouveau</p>
+					<img src="stil-u2Lp8tXIcjw-unsplash.jpg">
+					<div>
+						<div>
+							<p >La note enchantée</p>
+							<p >Charonne</p>
+						</div>
+						<div>
+							<i class="far fa-heart"></i>
+						</div>
+					</div>
+
+
+				</a>
+				<a class="restaurantLink" href="#">
+					<img src="toa-heftiba-DQKerTsQwi0-unsplash.jpg">
+					<div>
+						<div>
+							<p >À la Française</p>
+							<p >Cité Rouge</p>
+						</div>
+						<div>
+							<i class="far fa-heart"></i>
+						</div>
+					</div>
+
+
+				</a>
+				<a class="restaurantLink" href="#">
+					<img src="louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
+					<div>
+						<div>
+							<p >Le délice des sens</p>
+							<p >Folie-Méricourt</p>
+						</div>
+						<div>
+							<i class="far fa-heart"></i>
+						</div>
+					</div>
+
+
+				</a>
 			
 			</section>
 			<footer>
