--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 					<input type="button" value="Explorer nos restaurants">
 				</div>
 				
-			</div>
+			</div> 
 			
 		</header>
-		<section class="Fonctionnement">
+<!--		<section class="Fonctionnement">
 			<p class="titrefonctionnement"> Fonctionnement</p>
 			<div class="blocfonctionnement">
 				<i class="fas fa-mobile-alt"></i>
@@ -66,8 +66,8 @@
 						</div>
 					</div>
 
-
 				</a>
+
 				<a class="restaurantLink" href="#">
 					<p class="newRestaurant">Nouveau</p>
 					<img src="stil-u2Lp8tXIcjw-unsplash.jpg">
@@ -112,7 +112,7 @@
 
 				</a>
 			
-			</section>
+			</section> 
 			<footer>
 				<img alt="logo" src="ohmyfood.png">
 				<i class="fas fa-utensils"></i>
@@ -122,7 +122,7 @@
 				<p class="ML">Mentions légales</p>
 				<p class="contact">Contact</p>
 			</footer>
-		
+		-->
 	</div>
 
 <body>
