police plus premier bloc modifier

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			</div> 
 			
 		</header>
-<!--		<section class="Fonctionnement">
+		<section class="Fonctionnement">
 			<p class="titrefonctionnement"> Fonctionnement</p>
 			<div class="blocfonctionnement">
 				<i class="fas fa-mobile-alt"></i>
@@ -122,7 +122,7 @@
 				<p class="ML">Mentions légales</p>
 				<p class="contact">Contact</p>
 			</footer>
-		-->
+		
 	</div>
 
 <body>
