--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 				<img alt="logo" src="ohmyfood.png">
 			</div>
 			<div class="GPS">
-				<div class="imageGPS">
-					<i class="fas fa-map-marker-alt"></i>
-				</div>
+				
 				<div class="textGPS">
-					<p> Paris, Belleville</p>
+					
+
+					<p> <i class="fas fa-map-marker-alt"></i> &nbsp; Paris, Belleville</p>
 				</div>
 			</div>
 			<div class="blocreservation">
@@ -38,6 +38,7 @@
 		<section class="Fonctionnement">
 			<p class="titrefonctionnement"> Fonctionnement</p>
 			<div class="blocfonctionnement">
+				<div class="fonctionnementnombre">1</div>
 				<i class="fas fa-mobile-alt"></i>
 				<p class="textblocfonctionnement"> Choisissez un restaurant</p>
 			</div>
