alignement text et image

--- a/index.html
+++ b/index.html
@@ -39,16 +39,15 @@
 			<p class="titrefonctionnement"> Fonctionnement</p>
 			<div class="blocfonctionnement">
 				<div class="fonctionnementnombre">1</div>
-				<i class="fas fa-mobile-alt"></i>
-				<p class="textblocfonctionnement"> Choisissez un restaurant</p>
+				<p class="textblocfonctionnement"><i class="fas fa-mobile-alt"></i> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Choisissez un restaurant</p>
 			</div>
 			<div class="blocfonctionnement">
-				<i class="fas fa-list-ul"></i>
-				<p class="textblocfonctionnement">Composez votre menu</p>
+				<div class="fonctionnementnombre">2</div>
+				<p class="textblocfonctionnement"><i class="fas fa-list-ul"></i> &nbsp; &nbsp;&nbsp;&nbsp; Composez votre menu</p>
 			</div>
 			<div class="blocfonctionnement">
-				<i class="fas fa-store"></i>
-				<p class="textblocfonctionnement">Dégustez au restaurant</p>
+				<div class="fonctionnementnombre">3</div>
+				<p class="textblocfonctionnement"><i class="fas fa-store"></i> &nbsp; &nbsp; &nbsp; Dégustez au restaurant</p>
 			</div>
 		</section>
 		<section class="Restaurant">
@@ -60,9 +59,9 @@
 					<div>
 						<div>
 							<p class="name">La palette du goût</p>
-							<p >Ménilmontant</p>
+							<p class="spe">Ménilmontant</p>
 						</div>
-						<div>
+						<div class="coeur">
 							<i class="far fa-heart"></i>
 						</div>
 					</div>
@@ -74,10 +73,10 @@
 					<img src="stil-u2Lp8tXIcjw-unsplash.jpg">
 					<div>
 						<div>
-							<p >La note enchantée</p>
-							<p >Charonne</p>
+							<p class="name">La note enchantée</p>
+							<p class="spe">Charonne</p>
 						</div>
-						<div>
+						<div class="coeur">
 							<i class="far fa-heart"></i>
 						</div>
 					</div>
@@ -88,10 +87,10 @@
 					<img src="toa-heftiba-DQKerTsQwi0-unsplash.jpg">
 					<div>
 						<div>
-							<p >À la Française</p>
-							<p >Cité Rouge</p>
+							<p class="name">À la Française</p>
+							<p class="spe">Cité Rouge</p>
 						</div>
-						<div>
+						<div class="coeur">
 							<i class="far fa-heart"></i>
 						</div>
 					</div>
@@ -102,10 +101,10 @@
 					<img src="louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
 					<div>
 						<div>
-							<p >Le délice des sens</p>
-							<p >Folie-Méricourt</p>
+							<p class="name">Le délice des sens</p>
+							<p class="spe" >Folie-Méricourt</p>
 						</div>
-						<div>
+						<div class="coeur">
 							<i class="far fa-heart"></i>
 						</div>
 					</div>
@@ -115,11 +114,9 @@
 			
 			</section> 
 			<footer>
-				<img alt="logo" src="ohmyfood.png">
-				<i class="fas fa-utensils"></i>
-				<p class="proposer">Proposer un restaurant</p>
-				<i class="fas fa-hands-helping"></i>
-				<p class="partenaire">Devenir partenaire</p>
+				<img alt="logoblanc" src="ohmyfood.png">
+				<p class="proposer"><i class="fas fa-utensils"></i> &nbsp; Proposer un restaurant</p>
+				<p class="partenaire"><i class="fas fa-hands-helping"></i> &nbsp; Devenir partenaire</p>
 				<p class="ML">Mentions légales</p>
 				<p class="contact">Contact</p>
 			</footer>
