modification logo footer et fonctionnement

--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -14,8 +14,59 @@
 			<div class="logo">
 				<img alt="logo" src="ohmyfood.png">
 				<i class="fas fa-arrow-left"></i>
-				<img class="imagerestaurantdeux"src="toa-heftiba-DQKerTsQwi0-unsplash.jpg">
-			</div>
+	  		</div>
+	  	</header>
+	  	<section>
+	  		<img class="imagerestaurantdeux"src="toa-heftiba-DQKerTsQwi0-unsplash.jpg">
+	  		<div>
+	  			<p>A la francaise</p>
+	  			<i class="far fa-heart"></i>
+	  		</div>
+	  		<div class="blocplats">
+	  			<p class="titrestyledeplat">Entrées</p>
+				<p>Tartare de poulpe acidulé</p>
+				<p>Aux zestes d'orange</p>
+				<p>25€</p>
+	  		</div>
+	  		
+
+			Velouté de légumes d'antan
+			Carotte, panais, topinambour
+			35€
+
+			Soupe à l'oignon
+			Revisitée
+			20€
+
+			Plats
+			Coquilles Saint-Jacques
+			Accompagnées d'une purée de panais
+			40€
+
+			Magret de canard
+			Et parmentier de pommes de terre
+			35€
+
+			Pigeonneau d’Ille-et-Vilaine
+			Sur son lit de gnocchis aux légumes
+			44€
+
+			Desserts
+			Pétales de violettes glacés
+			Et purée de noisettes
+			18€
+
+			Fondant au chocolat
+			Revisité
+			22€
+
+			Millefeuille croustillant
+			Myrtilles et pâte d’amande
+			23€
+	  	</section>
+
+	
+			
 	</div>
 
 </body>
