--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<p class="titrefonctionnement"> Fonctionnement</p>
 			<div class="blocfonctionnement">
 				<div class="fonctionnementnombre">1</div>
-				<p class="textblocfonctionnement"><i class="fas fa-mobile-alt"></i> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Choisissez un restaurant</p>
+				<div class="textblocfonctionnement"><div><i class="fas fa-mobile-alt"></i></div> Choisissez un restaurant</div>
 			</div>
 			<div class="blocfonctionnement">
 				<div class="fonctionnementnombre">2</div>
@@ -114,7 +114,7 @@
 			
 			</section> 
 			<footer>
-				<img alt="logoblanc" src="ohmyfood.png">
+				<img alt="logoblanc" src="ohmyfood@2x.svg">
 				<p class="proposer"><i class="fas fa-utensils"></i> &nbsp; Proposer un restaurant</p>
 				<p class="partenaire"><i class="fas fa-hands-helping"></i> &nbsp; Devenir partenaire</p>
 				<p class="ML">Mentions légales</p>
