espace element bloc fonctionnement

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			</div>
 			<div class="blocreservation">
 				<p class="reservegras">
-					Réservez le menu qui vous convient
+					Réservez le menu qui <br> vous convient
 				</p>
 				<p class="decouverte">
 					Découvrez des restaurants d'exception,<br>
@@ -43,11 +43,11 @@
 			</div>
 			<div class="blocfonctionnement">
 				<div class="fonctionnementnombre">2</div>
-				<p class="textblocfonctionnement"><i class="fas fa-list-ul"></i> &nbsp; &nbsp;&nbsp;&nbsp; Composez votre menu</p>
+				<div class="textblocfonctionnement"><div><i class="fas fa-list-ul"></i></div> Composez votre menu</div>
 			</div>
 			<div class="blocfonctionnement">
 				<div class="fonctionnementnombre">3</div>
-				<p class="textblocfonctionnement"><i class="fas fa-store"></i> &nbsp; &nbsp; &nbsp; Dégustez au restaurant</p>
+				<div class="textblocfonctionnement"><div><i class="fas fa-store"></i></div>Dégustez au restaurant</div>
 			</div>
 		</section>
 		<section class="Restaurant">
