position bloc page restaurant

--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -3,7 +3,7 @@
 <html lang="fr">
 <head>
 	<title>Menu-A la française</title>
-	<link rel="stylesheet" type="text/css" href="Ohmyfoodindex.css">
+	<link rel="stylesheet" type="text/css" href="pagesrestaurants.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
@@ -13,20 +13,25 @@
 		<header class="hautdelapage">
 			<div class="logo">
 				<img alt="logo" src="ohmyfood.png">
-				<i class="fas fa-arrow-left"></i>
 	  		</div>
+	  		<a href="/index.html" class="fleche"><i class="fas fa-arrow-left"></i></a>
 	  	</header>
 	  	<section>
 	  		<img class="imagerestaurantdeux"src="toa-heftiba-DQKerTsQwi0-unsplash.jpg">
-	  		<div>
+	  		<div class="contenermenu">
+	  		<div >
 	  			<p>A la francaise</p>
 	  			<i class="far fa-heart"></i>
 	  		</div>
 	  		<div class="blocplats">
 	  			<p class="titrestyledeplat">Entrées</p>
-				<p>Tartare de poulpe acidulé</p>
-				<p>Aux zestes d'orange</p>
-				<p>25€</p>
+					<p class="Plats">Tartare de poulpe acidulé</p>
+						<p>Aux zestes d'orange</p>
+						<p>25€</p>
+					<p class="Plats">Velouté de légumes d'antan</p>
+					<p>Carotte, panais, topinambour</p>
+					<p>35€</p>
+	  		</div>
 	  		</div>
 	  		
 
@@ -64,6 +69,13 @@
 			Myrtilles et pâte d’amande
 			23€
 	  	</section>
+	  	<footer>
+				<img alt="logoblanc" src="ohmyfood@2x.svg">
+				<p class="proposer"><i class="fas fa-utensils"></i> &nbsp; Proposer un restaurant</p>
+				<p class="partenaire"><i class="fas fa-hands-helping"></i> &nbsp; Devenir partenaire</p>
+				<p class="ML">Mentions légales</p>
+				<p class="contact">Contact</p>
+			</footer>
 
 	
 			
