--- a/index.html
+++ b/index.html
@@ -62,8 +62,15 @@
 							<p class="name">La palette du goût</p>
 							<p class="spe">Ménilmontant</p>
 						</div>
-						<div class="coeur">
-							<i class="far fa-heart"></i>
+						<div class="conteneurcoeur">
+							<div class="coeur">
+								<i class="fas fa-heart"></i>
+							</div>
+							<div class="coeur2">
+								<i class="far fa-heart"></i>
+							</div>
+							
+
 						</div>
 					</div>
 
@@ -77,8 +84,14 @@
 							<p class="name">La note enchantée</p>
 							<p class="spe">Charonne</p>
 						</div>
-						<div class="coeur">
-							<i class="far fa-heart"></i>
+						<div class="conteneurcoeur">
+							<div class="coeur2">
+								<i class="far fa-heart"></i>
+							</div>
+							<div class="coeur">
+								<i class="fas fa-heart"></i>
+							</div>
+
 						</div>
 					</div>
 
@@ -91,8 +104,14 @@
 							<p class="name">À la Française</p>
 							<p class="spe">Cité Rouge</p>
 						</div>
-						<div class="coeur">
-							<i class="far fa-heart"></i>
+						<div class="conteneurcoeur">
+							<div class="coeur2">
+								<i class="far fa-heart"></i>
+							</div>
+							<div class="coeur">
+								<i class="fas fa-heart"></i>
+							</div>
+
 						</div>
 					</div>
 
@@ -105,8 +124,14 @@
 							<p class="name">Le délice des sens</p>
 							<p class="spe" >Folie-Méricourt</p>
 						</div>
-						<div class="coeur">
-							<i class="far fa-heart"></i>
+						<div class="conteneurcoeur">
+							<div class="coeur2">
+								<i class="far fa-heart"></i>
+							</div>
+							<div class="coeur">
+								<i class="fas fa-heart"></i>
+							</div>
+
 						</div>
 					</div>
 
@@ -115,11 +140,13 @@
 			
 			</section> 
 			<footer>
-				<img alt="logoblanc" src="ohmyfood@2x.svg">
-				<p class="proposer"><i class="fas fa-utensils"></i> &nbsp; Proposer un restaurant</p>
-				<p class="partenaire"><i class="fas fa-hands-helping"></i> &nbsp; Devenir partenaire</p>
-				<p class="ML">Mentions légales</p>
-				<p class="contact">Contact</p>
+				<div class="basdepage">
+					<img alt="logoblanc" src="ohmyfood@2x.svg">
+					<p class="proposer"><i class="fas fa-utensils"></i> &nbsp; Proposer un restaurant</p>
+					<p class="partenaire"><i class="fas fa-hands-helping"></i> &nbsp; Devenir partenaire</p>
+					<p class="ML">Mentions légales</p>
+					<p class="contact">Contact</p>
+				</div>
 			</footer>
 		
 	</div>
