--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -2,7 +2,7 @@
 <html>
 <html lang="fr">
 <head>
-	<title>Menu-A la française</title>
+	<title>Menu-À la française</title>
 	<link rel="stylesheet" type="text/css" href="pagesrestaurants.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,75 +20,119 @@
 	  		<img class="imagerestaurantdeux"src="toa-heftiba-DQKerTsQwi0-unsplash.jpg">
 	  		<div class="contenermenu">
 	  		<div class="titre" >
-	  			<p>A la francaise</p>
-	  			<i class="far fa-heart"></i>
+	  			<p>À la francaise</p>
+	  			<div class="conteneurcoeur">
+							<div class="coeur2">
+								<i class="far fa-heart"></i>
+							</div>
+							<div class="coeur">
+								<i class="fas fa-heart"></i>
+							</div>
+
+				</div>
 	  		</div>
 	  		<div class="blocplats">
 	  			<div class="styleplat">
-	  				<p class="titrestyledeplat">ENTREES</p>
+	  				<div class="titrestyledeplat">
+	  					<p>ENTRÉES</p>
+	  					<div class="trait"></div>
+	  				</div>
 	  				<div class="lesplats">
-						<p class="Plats">Tartare de poulpe acidulé</p>
-							<p>Aux zestes d'orange</p>
-							<p>25€</p>
+	  					<div class="nomplats">
+							<p class="Plats">Tartare de poulpe acidulé aaaaaaaaa aaaaaaaaa aaaaaaaaa aaaaaaaaaaaa</p>
+							<p>Aux zestes d'orangeaaaaa aaaaaaaaaaaa aaaaaaaa aaaaaa</p>
+						</div>
+							<div class="prix">25€</div>
+						<div class="carre">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</div>
 					<div class="lesplats">
-						<p class="Plats">Velouté de légumes d'antan</p>
-						<p>Carotte, panais, topinambour</p>
+						<div class="nomplats">
+							<p class="Plats">Velouté de légumes d'antan</p>
+							<p>Carotte, panais, topinambour</p>
+						</div>
 						<p>35€</p>
 					</div>
 					<div class="lesplats">
-						<p class="Plats">Soupe à l'oignon</p>
-						<p>Revisitée</p>
+						<div class="nomplats">
+							<p class="Plats">Soupe à l'oignon</p>
+							<p>Revisitée</p>
+						</div>
 						<p>20€</p>
 					</div>
 					
 				</div>
 				<div class="styleplat">
-	  				<p class="titrestyledeplat">PLATS</p>
+					<div class="titrestyledeplat">
+	  					<p>PLATS</p>
+	  					<div class="trait"></div>
+	  				</div>
 	  				<div class="lesplats">
-						<p class="Plats">Coquilles Saint-Jacques</p>
+	  					<div class="nomplats">
+							<p class="Plats">Coquilles Saint-Jacques</p>
 							<p>Accompagnées d'une purée de panais</p>
-							<p>40€</p>
+						</div>
+						<p>40€</p>
 					</div>
 					<div class="lesplats">
-						<p class="Plats">Magret de canard</p>
-						<p>Et parmentier de pommes de terre</p>
+						<div class="nomplats">
+							<p class="Plats">Magret de canard</p>
+							<p>Et parmentier de pommes de terre</p>
+						</div>
 						<p>35€</p>
 					</div>
 					<div class="lesplats">
-						<p class="Plats">Pigeonneau d’Ille-et-Vilaine</p>
-						<p>Sur son lit de gnocchis aux légumes</p>
+						<div class="nomplats">
+							<p class="Plats">Pigeonneau d’Ille-et-Vilaine</p>
+							<p>Sur son lit de gnocchis aux légumes</p>
+						</div>
 						<p>44€</p>
 					</div>
 				</div>
 				<div class="styleplat">
-	  				<p class="titrestyledeplat">DESSERTS</p>
+					<div class="titrestyledeplat">
+	  					<p>DÉSSERTS</p>
+	  					<div class="trait"></div>
+	  				</div>
 	  				<div class="lesplats">
-						<p class="Plats">Pétales de violettes glacés</p>
-						<p>Et purée de noisettes</p>
+	  					<div class="nomplats">
+							<p class="Plats">Pétales de violettes glacés</p>
+							<p>Et purée de noisettes</p>
+						</div>
 						<p>18€</p>
 					</div>
 					<div class="lesplats">
-						<p class="Plats">Fondant au chocolat</p>
-						<p>Revisité</p>
+						<div class="nomplats">
+							<p class="Plats">Fondant au chocolat</p>
+							<p>Revisité</p>
+						</div>
 						<p>22€</p>
 					</div>
 					<div class="lesplats">
-						<p class="Plats">Millefeuille croustillant</p>
-						<p>Myrtilles et pâte d’amande</p>
+						<div class="nomplats">
+							<p class="Plats">Millefeuille croustillant</p>
+							<p>Myrtilles et pâte d’amande</p>
+						</div>
 						<p>23€</p>
 					<div class="lesplats">
 				</div>
 	  		</div>
+
+	  		<div class="lienrestaurants">
+					<input type="button" value="Commander">
+				</div>
 	  		</div>
 	  	
 	  	</section>
-	  	<footer>
-				<img alt="logoblanc" src="ohmyfood@2x.svg">
-				<p class="proposer"><i class="fas fa-utensils"></i> &nbsp; Proposer un restaurant</p>
-				<p class="partenaire"><i class="fas fa-hands-helping"></i> &nbsp; Devenir partenaire</p>
-				<p class="ML">Mentions légales</p>
-				<p class="contact">Contact</p>
+	<footer>
+				<div class="basdepage">
+					<img alt="logoblanc" src="ohmyfood@2x.svg">
+					<p class="proposer"><i class="fas fa-utensils"></i> &nbsp; Proposer un restaurant</p>
+					<p class="partenaire"><i class="fas fa-hands-helping"></i> &nbsp; Devenir partenaire</p>
+					<p class="ML">Mentions légales</p>
+					<p class="contact">Contact</p>
+				</div>
 			</footer>
 
 	
