--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -14,7 +14,7 @@
 			<div class="logo">
 				<img alt="logo" src="ohmyfood.png">
 	  		</div>
-	  		<a href="/index.html" class="fleche"><i class="fas fa-arrow-left"></i></a>
+	  		<a href="index.html" class="fleche"><i class="fas fa-arrow-left"></i></a>
 	  	</header>
 	  	<section>
 	  		<img class="imagerestaurantdeux"src="toa-heftiba-DQKerTsQwi0-unsplash.jpg">
@@ -22,11 +22,11 @@
 	  		<div class="titre" >
 	  			<p>À la francaise</p>
 	  			<div class="conteneurcoeur">
+								<div class="coeur">
+								<i class="fas fa-heart"></i>
+							</div>
 							<div class="coeur2">
 								<i class="far fa-heart"></i>
-							</div>
-							<div class="coeur">
-								<i class="fas fa-heart"></i>
 							</div>
 
 				</div>
@@ -39,8 +39,8 @@
 	  				</div>
 	  				<div class="lesplats">
 	  					<div class="nomplats">
-							<p class="Plats">Tartare de poulpe acidulé aaaaaaaaa aaaaaaaaa aaaaaaaaa aaaaaaaaaaaa</p>
-							<p>Aux zestes d'orangeaaaaa aaaaaaaaaaaa aaaaaaaa aaaaaa</p>
+							<p class="Plats">Tartare de poulpe acidulé</p>
+							<p>Aux zests d'orange</p>
 						</div>
 							<div class="prix">25€</div>
 						<div class="carre">
@@ -52,14 +52,20 @@
 							<p class="Plats">Velouté de légumes d'antan</p>
 							<p>Carotte, panais, topinambour</p>
 						</div>
-						<p>35€</p>
+						<div class="prix">35€</div>
+						<div class="carre">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</div>
 					<div class="lesplats">
 						<div class="nomplats">
 							<p class="Plats">Soupe à l'oignon</p>
 							<p>Revisitée</p>
 						</div>
-						<p>20€</p>
+						<div class="prix">20€</div>
+						<div class="carre">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</div>
 					
 				</div>
@@ -73,26 +79,35 @@
 							<p class="Plats">Coquilles Saint-Jacques</p>
 							<p>Accompagnées d'une purée de panais</p>
 						</div>
-						<p>40€</p>
+						<div class="prix">40€</div>
+						<div class="carre">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</div>
 					<div class="lesplats">
 						<div class="nomplats">
 							<p class="Plats">Magret de canard</p>
 							<p>Et parmentier de pommes de terre</p>
 						</div>
-						<p>35€</p>
+						<div class="prix">35€</div>
+						<div class="carre">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</div>
 					<div class="lesplats">
 						<div class="nomplats">
 							<p class="Plats">Pigeonneau d’Ille-et-Vilaine</p>
 							<p>Sur son lit de gnocchis aux légumes</p>
 						</div>
-						<p>44€</p>
+						<div class="prix">44€</div>
+						<div class="carre">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</div>
 				</div>
 				<div class="styleplat">
 					<div class="titrestyledeplat">
-	  					<p>DÉSSERTS</p>
+	  					<p>DESSERTS</p>
 	  					<div class="trait"></div>
 	  				</div>
 	  				<div class="lesplats">
@@ -100,21 +115,30 @@
 							<p class="Plats">Pétales de violettes glacés</p>
 							<p>Et purée de noisettes</p>
 						</div>
-						<p>18€</p>
+						<div class="prix">18€</div>
+						<div class="carre">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</div>
 					<div class="lesplats">
 						<div class="nomplats">
 							<p class="Plats">Fondant au chocolat</p>
 							<p>Revisité</p>
 						</div>
-						<p>22€</p>
+						<div class="prix">22€</div>
+						<div class="carre">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					</div>
 					<div class="lesplats">
 						<div class="nomplats">
 							<p class="Plats">Millefeuille croustillant</p>
 							<p>Myrtilles et pâte d’amande</p>
 						</div>
-						<p>23€</p>
+						<div class="prix">23€</div>
+						<div class="carre">
+							<i class="fas fa-check-circle"></i>
+						</div>
 					<div class="lesplats">
 				</div>
 	  		</div>
