--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		<section class="Restaurant">
 			<p class="titrerestaurant">Restaurants</p>
 
-				<a class="restaurantLink" href="#">
+				<a class="restaurantLink" href="alafrancaise.html">
 					<p class="newRestaurant">Nouveau</p>
 					<img src="jay-wennington-N_Y88TWmGwA-unsplash.jpg">
 					<div>
@@ -85,11 +85,11 @@
 							<p class="spe">Charonne</p>
 						</div>
 						<div class="conteneurcoeur">
-							<div class="coeur2">
-								<i class="far fa-heart"></i>
-							</div>
 							<div class="coeur">
 								<i class="fas fa-heart"></i>
+							</div>
+							<div class="coeur2">
+								<i class="far fa-heart"></i>
 							</div>
 
 						</div>
@@ -105,11 +105,11 @@
 							<p class="spe">Cité Rouge</p>
 						</div>
 						<div class="conteneurcoeur">
+								<div class="coeur">
+								<i class="fas fa-heart"></i>
+							</div>
 							<div class="coeur2">
 								<i class="far fa-heart"></i>
-							</div>
-							<div class="coeur">
-								<i class="fas fa-heart"></i>
 							</div>
 
 						</div>
@@ -125,11 +125,11 @@
 							<p class="spe" >Folie-Méricourt</p>
 						</div>
 						<div class="conteneurcoeur">
+								<div class="coeur">
+								<i class="fas fa-heart"></i>
+							</div>
 							<div class="coeur2">
 								<i class="far fa-heart"></i>
-							</div>
-							<div class="coeur">
-								<i class="fas fa-heart"></i>
 							</div>
 
 						</div>
