correction de bugs plus couleur

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 					<p class="proposer"><i class="fas fa-utensils"></i> &nbsp; Proposer un restaurant</p>
 					<p class="partenaire"><i class="fas fa-hands-helping"></i> &nbsp; Devenir partenaire</p>
 					<p class="ML">Mentions légales</p>
-					<p class="contact">Contact</p>
+					<a href="mailto:ohmyfood@gmail.fr" class="contact"> Contact </a>
 				</div>
 			</footer>
 		
