--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -40,7 +40,7 @@
 	  				<div class="lesplats">
 	  					<div class="nomplats">
 							<p class="Plats">Tartare de poulpe acidulé</p>
-							<p>Aux zests d'orange</p>
+							<p class="description">Aux zests d'orange</p>
 						</div>
 							<div class="prix">25€</div>
 						<div class="carre">
@@ -50,7 +50,7 @@
 					<div class="lesplats">
 						<div class="nomplats">
 							<p class="Plats">Velouté de légumes d'antan</p>
-							<p>Carotte, panais, topinambour</p>
+							<p class="description">Carotte, panais, topinambour</p>
 						</div>
 						<div class="prix">35€</div>
 						<div class="carre">
@@ -60,7 +60,7 @@
 					<div class="lesplats">
 						<div class="nomplats">
 							<p class="Plats">Soupe à l'oignon</p>
-							<p>Revisitée</p>
+							<p class="description">Revisitée</p>
 						</div>
 						<div class="prix">20€</div>
 						<div class="carre">
@@ -77,7 +77,7 @@
 	  				<div class="lesplats">
 	  					<div class="nomplats">
 							<p class="Plats">Coquilles Saint-Jacques</p>
-							<p>Accompagnées d'une purée de panais</p>
+							<p class="description">Accompagnées d'une purée de panais</p>
 						</div>
 						<div class="prix">40€</div>
 						<div class="carre">
@@ -87,7 +87,7 @@
 					<div class="lesplats">
 						<div class="nomplats">
 							<p class="Plats">Magret de canard</p>
-							<p>Et parmentier de pommes de terre</p>
+							<p class="description">Et parmentier de pommes de terre</p>
 						</div>
 						<div class="prix">35€</div>
 						<div class="carre">
@@ -97,7 +97,7 @@
 					<div class="lesplats">
 						<div class="nomplats">
 							<p class="Plats">Pigeonneau d’Ille-et-Vilaine</p>
-							<p>Sur son lit de gnocchis aux légumes</p>
+							<p class="description">Sur son lit de gnocchis aux légumes</p>
 						</div>
 						<div class="prix">44€</div>
 						<div class="carre">
@@ -113,7 +113,7 @@
 	  				<div class="lesplats">
 	  					<div class="nomplats">
 							<p class="Plats">Pétales de violettes glacés</p>
-							<p>Et purée de noisettes</p>
+							<p class="description">Et purée de noisettes</p>
 						</div>
 						<div class="prix">18€</div>
 						<div class="carre">
@@ -123,7 +123,7 @@
 					<div class="lesplats">
 						<div class="nomplats">
 							<p class="Plats">Fondant au chocolat</p>
-							<p>Revisité</p>
+							<p class="description">Revisité</p>
 						</div>
 						<div class="prix">22€</div>
 						<div class="carre">
@@ -133,13 +133,12 @@
 					<div class="lesplats">
 						<div class="nomplats">
 							<p class="Plats">Millefeuille croustillant</p>
-							<p>Myrtilles et pâte d’amande</p>
+							<p class="description">Myrtilles et pâte d’amande</p>
 						</div>
 						<div class="prix">23€</div>
 						<div class="carre">
 							<i class="fas fa-check-circle"></i>
 						</div>
-					<div class="lesplats">
 				</div>
 	  		</div>
 
@@ -155,7 +154,7 @@
 					<p class="proposer"><i class="fas fa-utensils"></i> &nbsp; Proposer un restaurant</p>
 					<p class="partenaire"><i class="fas fa-hands-helping"></i> &nbsp; Devenir partenaire</p>
 					<p class="ML">Mentions légales</p>
-					<p class="contact">Contact</p>
+					<a href="mailto:ohmyfood@gmail.fr" class="contact"> Contact </a>
 				</div>
 			</footer>
 
