--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 				</a>
 
-				<a class="restaurantLink" href="#">
+				<a class="restaurantLink" href="lanoteenchantee.html">
 					<p class="newRestaurant">Nouveau</p>
 					<img src="stil-u2Lp8tXIcjw-unsplash.jpg">
 					<div>
