la palette du gout

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		<section class="Restaurant">
 			<p class="titrerestaurant">Restaurants</p>
 
-				<a class="restaurantLink" href="alafrancaise.html">
+				<a class="restaurantLink" href="lapalettedugout.html">
 					<p class="newRestaurant">Nouveau</p>
 					<img src="jay-wennington-N_Y88TWmGwA-unsplash.jpg">
 					<div>
@@ -97,7 +97,7 @@
 
 
 				</a>
-				<a class="restaurantLink" href="#">
+				<a class="restaurantLink" href="alafrancaise.html">
 					<img src="toa-heftiba-DQKerTsQwi0-unsplash.jpg">
 					<div>
 						<div>
