chargement de page et effet page restaurant

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 	<meta charset="utf-8">
 	
 </head>
+<body>
+	<div class="tempsdechargement">
+		<div class="arc"></div>
+	</div>
 	<div class="page">
 		<header class="hautdelapage">
 			<div class="logo">
@@ -151,7 +155,7 @@
 		
 	</div>
 
-<body>
+
 	
 </body>
 </html>
