--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -32,7 +32,7 @@
 				</div>
 	  		</div>
 	  		<div class="blocplats">
-	  			<div class="styleplat">
+	  			<div class="styleplat anime1">
 	  				<div class="titrestyledeplat">
 	  					<p>ENTRÉES</p>
 	  					<div class="trait"></div>
@@ -69,7 +69,7 @@
 					</div>
 					
 				</div>
-				<div class="styleplat">
+				<div class="styleplat anime2">
 					<div class="titrestyledeplat">
 	  					<p>PLATS</p>
 	  					<div class="trait"></div>
@@ -105,7 +105,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="styleplat">
+				<div class="styleplat anime3">
 					<div class="titrestyledeplat">
 	  					<p>DESSERTS</p>
 	  					<div class="trait"></div>
