--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html>
 <html lang="fr">
 <head>
 	<title>Menu-À la française</title>
@@ -17,17 +16,19 @@
 	  		<a href="index.html" class="fleche"><i class="fas fa-arrow-left"></i></a>
 	  	</header>
 	  	<section>
-	  		<img class="imagerestaurantdeux"src="toa-heftiba-DQKerTsQwi0-unsplash.jpg">
+	  		<img class="imagerestaurantdeux" alt="image a la francaise" src="toa-heftiba-DQKerTsQwi0-unsplash.jpg">
 	  		<div class="contenermenu">
-	  		<div class="titre" >
-	  			<p>À la francaise</p>
-	  			<div class="conteneurcoeur">
-								<div class="coeur">
-								<i class="fas fa-heart"></i>
-							</div>
-							<div class="coeur2">
-								<i class="far fa-heart"></i>
-							</div>
+	  			<div class="titre" >
+	  				<p>À la francaise</p>
+	  				<div class="conteneurcoeur">
+						<div class="coeur">
+							<i class="fas fa-heart"></i>
+						</div>
+						<div class="coeur2">
+							<i class="far fa-heart"></i>
+						</div>
+					</div>
+
 
 				</div>
 	  		</div>
@@ -139,12 +140,13 @@
 						<div class="carre">
 							<i class="fas fa-check-circle"></i>
 						</div>
+					</div>
 				</div>
 	  		</div>
 
 	  		<div class="lienrestaurants">
 					<input type="button" value="Commander">
-				</div>
+	
 	  		</div>
 	  	
 	  	</section>
