--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			
 		</header>
 		<section class="Fonctionnement">
-			<p class="titrefonctionnement"> Fonctionnement</p>
+			<h1 class="titrefonctionnement"> Fonctionnement</h1>
 			<div class="blocfonctionnement">
 				<div class="fonctionnementnombre">1</div>
 				<div class="textblocfonctionnement"><div><i class="fas fa-mobile-alt"></i></div> Choisissez un restaurant</div>
@@ -56,11 +56,11 @@
 			</div>
 		</section>
 		<section class="Restaurant">
-			<p class="titrerestaurant">Restaurants</p>
+			<h2 class="titrerestaurant">Restaurants</h2>
 
 				<a class="restaurantLink" href="lapalettedugout.html">
 					<p class="newRestaurant">Nouveau</p>
-					<img src="jay-wennington-N_Y88TWmGwA-unsplash.jpg">
+					<img alt="image du restaurant la palette du gout" src="jay-wennington-N_Y88TWmGwA-unsplash.jpg">
 					<div>
 						<div>
 							<p class="name">La palette du goût</p>
@@ -82,7 +82,7 @@
 
 				<a class="restaurantLink" href="lanoteenchantee.html">
 					<p class="newRestaurant">Nouveau</p>
-					<img src="stil-u2Lp8tXIcjw-unsplash.jpg">
+					<img alt="image restaurant la note enchantee" src="stil-u2Lp8tXIcjw-unsplash.jpg">
 					<div>
 						<div>
 							<p class="name">La note enchantée</p>
@@ -102,7 +102,7 @@
 
 				</a>
 				<a class="restaurantLink" href="alafrancaise.html">
-					<img src="toa-heftiba-DQKerTsQwi0-unsplash.jpg">
+					<img src="toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image à la francaise">
 					<div>
 						<div>
 							<p class="name">À la Française</p>
@@ -122,7 +122,7 @@
 
 				</a>
 				<a class="restaurantLink" href="ledélicedessens.html">
-					<img src="louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
+					<img alt="image restaurant le delice des sens" src="louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
 					<div>
 						<div>
 							<p class="name">Le délice des sens</p>
