--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html>
 <html lang="fr">
 <head>
 	<title>Menu-La note enchantée</title>
@@ -17,18 +16,18 @@
 	  		<a href="index.html" class="fleche"><i class="fas fa-arrow-left"></i></a>
 	  	</header>
 	  	<section>
-	  		<img class="imagerestaurantdeux"src="noteenchante1.jpg">
+	  		<img class="imagerestaurantdeux" alt="image la note enchantee" src="noteenchante1.jpg">
 	  		<div class="contenermenu">
-	  		<div class="titre" >
-	  			<p>La note enchantée</p>
+	  			<div class="titre" >
+	  				<p>La note enchantée</p>
+	  			</div>
 	  			<div class="conteneurcoeur">
-								<div class="coeur">
-								<i class="fas fa-heart"></i>
-							</div>
-							<div class="coeur2">
-								<i class="far fa-heart"></i>
-							</div>
-
+					<div class="coeur">
+						<i class="fas fa-heart"></i>
+					</div>
+					<div class="coeur2">
+						<i class="far fa-heart"></i>
+					</div>
 				</div>
 	  		</div>
 	  		<div class="blocplats">
@@ -42,7 +41,7 @@
 							<p class="Plats">Ravioles de foie gras </p>
 							<p class="description">Accompagnés de leur crème à la truffe</p>
 						</div>
-							<div class="prix">25€</div>
+							<div class="prix">25€ </div>
 						<div class="carre">
 							<i class="fas fa-check-circle"></i>
 						</div>
@@ -52,7 +51,7 @@
 							<p class="Plats">Caviar osciètre </p>
 							<p class="description">Sur blini à la farine de blé noir</p>
 						</div>
-						<div class="prix">35€</div>
+						<div class="prix">35€ </div>
 						<div class="carre">
 							<i class="fas fa-check-circle"></i>
 						</div>
@@ -77,7 +76,6 @@
 							<i class="fas fa-check-circle"></i>
 						</div>
 					</div>
-					
 				</div>
 				<div class="styleplat anime2">
 					<div class="titrestyledeplat">
@@ -149,14 +147,15 @@
 						<div class="carre">
 							<i class="fas fa-check-circle"></i>
 						</div>
+					</div>
 				</div>
 	  		</div>
 
 	  		<div class="lienrestaurants">
+	  			<div>
 					<input type="button" value="Commander">
 				</div>
 	  		</div>
-	  	
 	  	</section>
 	<footer>
 				<div class="basdepage">
