--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html>
 <html lang="fr">
 <head>
 	<title>Menu-La palette du goût</title>
@@ -17,10 +16,11 @@
 	  		<a href="index.html" class="fleche"><i class="fas fa-arrow-left"></i></a>
 	  	</header>
 	  	<section>
-	  		<img class="imagerestaurantdeux"src="jay-wennington-N_Y88TWmGwA-unsplash.jpg">
+	  		<img class="imagerestaurantdeux"  alt="image la pallette du gout" src="jay-wennington-N_Y88TWmGwA-unsplash.jpg">
 	  		<div class="contenermenu">
-	  		<div class="titre" >
-	  			<p>La palette du goût</p>
+	  			<div class="titre" >
+	  				<p>La palette du goût</p>
+	  			</div>
 	  			<div class="conteneurcoeur">
 								<div class="coeur">
 								<i class="fas fa-heart"></i>
@@ -139,24 +139,25 @@
 						<div class="carre">
 							<i class="fas fa-check-circle"></i>
 						</div>
+					</div>
 				</div>
 	  		</div>
-
 	  		<div class="lienrestaurants">
+	  			<div>
 					<input type="button" value="Commander">
 				</div>
 	  		</div>
-	  	
 	  	</section>
-	<footer>
-				<div class="basdepage">
-					<img alt="logoblanc" src="ohmyfood@2x.svg">
-					<p class="proposer"><i class="fas fa-utensils"></i> &nbsp; Proposer un restaurant</p>
-					<p class="partenaire"><i class="fas fa-hands-helping"></i> &nbsp; Devenir partenaire</p>
-					<p class="ML">Mentions légales</p>
-					<a href="mailto:ohmyfood@gmail.fr" class="contact"> Contact </a>
-				</div>
-			</footer>
+
+		<footer>
+			<div class="basdepage">
+				<img alt="logoblanc" src="ohmyfood@2x.svg">
+				<p class="proposer"><i class="fas fa-utensils"></i> &nbsp; Proposer un restaurant</p>
+				<p class="partenaire"><i class="fas fa-hands-helping"></i> &nbsp; Devenir partenaire</p>
+				<p class="ML">Mentions légales</p>
+				<a href="mailto:ohmyfood@gmail.fr" class="contact"> Contact </a>
+			</div>
+		</footer>
 
 	
 			
