--- a/ledélicedessens.html
+++ b/ledélicedessens.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html>
 <html lang="fr">
 <head>
 	<title>Menu-Le délice des sens</title>
@@ -17,18 +16,18 @@
 	  		<a href="index.html" class="fleche"><i class="fas fa-arrow-left"></i></a>
 	  	</header>
 	  	<section>
-	  		<img class="imagerestaurantdeux"src="louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
+	  		<img class="imagerestaurantdeux"  alt="image le delice des sens" src="louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
 	  		<div class="contenermenu">
-	  		<div class="titre" >
+	  			<div class="titre" >
 	  			<p>Le délice des sens</p>
+	  			</div>
 	  			<div class="conteneurcoeur">
-								<div class="coeur">
-								<i class="fas fa-heart"></i>
-							</div>
-							<div class="coeur2">
-								<i class="far fa-heart"></i>
-							</div>
-
+					<div class="coeur">
+						<i class="fas fa-heart"></i>
+					</div>
+					<div class="coeur2">
+						<i class="far fa-heart"></i>
+					</div>
 				</div>
 	  		</div>
 	  		<div class="blocplats">
@@ -139,10 +138,12 @@
 						<div class="carre">
 							<i class="fas fa-check-circle"></i>
 						</div>
+					</div>
 				</div>
 	  		</div>
 
 	  		<div class="lienrestaurants">
+	  			<div>
 					<input type="button" value="Commander">
 				</div>
 	  		</div>
