correction destop soutenance

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 		<section class="Restaurant">
 			<h1 class="titrerestaurant">Restaurants</h1>
 
+			<div class="deuxpremierrestaux">
 				<a class="restaurantLink" href="lapalettedugout.html">
 					<p class="newRestaurant">Nouveau</p>
 					<img alt="image du restaurant la palette du gout" src="jay-wennington-N_Y88TWmGwA-unsplash.jpg">
@@ -77,8 +78,8 @@
 
 						</div>
 					</div>
-
 				</a>
+			
 
 				<a class="restaurantLink" href="lanoteenchantee.html">
 					<p class="newRestaurant">Nouveau</p>
@@ -101,6 +102,9 @@
 
 
 				</a>
+			</div>
+
+			<div class="deuxdernierrestaux">
 				<a class="restaurantLink" href="alafrancaise.html">
 					<img src="toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image à la francaise">
 					<div>
@@ -141,7 +145,7 @@
 
 
 				</a>
-			
+			</div>
 			</section> 
 			<footer>
 				<div class="basdepage">
